# TensorRT

./: CMakeLists.txt  WatchDDog.sh  debug.h
autoaim/: CMakeLists.txt  armor_tracker.h  autoaim.cpp  autoaim.h
autoaim/TRT_detector/: TRTModule.cpp  TRTModule.hpp
autoaim/predictor/: predictor.h
buff/detector/: inference.h
coordsolver/: coordsolver.cpp
params/: coord_param.yaml
thread/: thread.cpp  thread.h
